fixing site. top bar now collapses on mobile.

--- a/stylus/style.styl
+++ b/stylus/style.styl
@@ -1,103 +1,185 @@
 @import 'nib'
 
-@import 'https://fonts.googleapis.com/css?family=Roboto:400,300,100,500'
+color1 = #000
+color2 = #000
+bgcolor1 = #fff
+bgcolor2 = #ddd
 
-global-reset()
+.top-bar, .top-bar-section li a, .top-bar .name h1 a, .top-bar expanded, .left-off-canvas-menu
+  background bgcolor1 !important
+  color color1 !important
 
-
-color1 = #616161
-color2 = #313d4d
-backcolor = #4ab1d1
-backcolor2 = #a46262
-textcolor1 = #ffffff
-textcolor2 = #ffffff
-formcolor = #99c3d0
-
-
-body
-  font-family 'Roboto'
-  font-weight 400
-  background-color backcolor
-  color textcolor2
-
-.topbar
-  background-color color2
-  color textcolor1
+.top-bar .name h1 a
+  font-size 1.65em
+  font-weight 500
+  font-family 'Gudea', sans-serif
   position relative
-  height 80px
-  overflow hidden
 
-form
-  label
-    font-size 25px
-  input[type = text]
-    outline 0
-    border 0
-    padding 10px 15px 10px 15px
-    color textcolor1
-    background-color rgba(255,255,255,.25)
-    width 400px
-    font-size 20px
 
-textarea
-  width 300px
 
-input[type = submit], input[type = button]
-  border-color #ffffff
-  border-style solid
-  border-width 0px
-  font-size 20px
-  width 400px
-  height 50px
-  font-size 20px
-  width 400px
-  height 50px
-  background-color rgba(255,255,255,0.1)
-  text-transform uppercase
-  color textcolor1
+ul
+  &.title-area
+    background bgcolor1 !important
+  &.left
+    li
+      a
+        font-size 0.875rem
+        color color1
+        text-transform uppercase
+        display block
+        font-weight 200
+        letter-spacing 1px
+        position relative
+        &:hover
+          color color1
+          &:before
+            visibility visible
+            -webkit-transform scaleX(1)
+            transform scaleX(1)
+            transition all .25s ease-in-out
+        &:before
+          position absolute
+          content ""
+          width 100%
+          height 2px
+          bottom 0px
+          left 0
+          background-color rgba(0, 0, 0, 0.8)
+          visibility hidden
+          -webkit-transform scaleX(0)
+          transform scaleX(0)
+          -webkit-transition all 0.2s ease-in-out 0s
+          transition all 0.2s ease-in-out 0s
+  &.off-canvas-list
+    li
+      label
+        border-top none
+        background-color bgcolor2
+        color color1
+      a
+        border 0
+        color color1
+        background-color bgcolor2
+    p
+      color color1
+      display inline-block
+      margin 0
+    div
+      &.ui-slider
+        width 90%
+        margin 0 auto
+  &.off-canvas-submenu
+    list-style-type none
+    margin-left 0.1rem
 
-select
-  width 300px
-  background-color rgba(255,255,255,0.25)
-  font-family 'Roboto'
-  font-weight 400
-  font-size 20px
-  color textcolor1
-  height 50px
-  border-color #ffffff
-  border-style solid
-  border-width 0px
-  -webkit-appearance: none;
-
-.name
-  font-family 'Roboto'
-  font-weight 100
-  text-align left
-  font-size 60px
+.tab-bar
+  background-color rgba(250, 250, 250, 0)
   float left
-  padding 10px
+  .menu-icon
+    span
+      &:after
+        height 0.1rem
+        margin-top -0.3rem
+        box-shadow 0 -3px 0px 1px #333, 0 4px 0 1px #333, 0 11px 0 1px #333
+      &:hover
+        &:after
+          box-shadow 0 -3px 0 1px #b3b3b3, 0 4px 0 1px #b3b3b3, 0 11px 0 1px #b3b3b3
+
+.top-bar .toggle-topbar.menu-icon a
+  color color1
+  & span::after
+    height 0.1rem
+    margin-top -0.3rem
+    box-shadow 0 -3px 0px 1px #333, 0 4px 0 1px #333, 0 11px 0 1px #333
+  &:hover
+    &:after
+      box-shadow 0 -3px 0 1px #b3b3b3, 0 4px 0 1px #b3b3b3, 0 11px 0 1px #b3b3b3
+
+.move-right
+  .exit-off-canvas
+    box-shadow 1px 0px 2px rgba(0, 0, 0, 0.5), 1px 0px 2px rgba(0, 0, 0, 0.5)
+
+.visual
+  height 100%
+
+input
+  &.button
+    background-color #666
+
+.hero
+  background-color bgcolor1
+  height 32rem
+  color color2
+  .intro
+    padding 2rem
+    position relative
+  h1
+    font-size 2rem
+    line-height 1.5em
+    letter-spacing -0.025em
+    font-weight 600
+    text-align center
+    color color2
+  p
+    line-height 1.75em
+    font-weight 200
+    text-align center
+    margin-bottom 2rem
+    color inherit
+    font-size 1.0rem
+    font-weight 300
+    text-align center
   a
-    text-decoration none
-    color textcolor1
+    &.button
+      margin 0 auto
+      display block
+      background-color rgba(0, 0, 0, 0)
+      border-style solid
+      border-radius 0.4rem
+      border-color color2
+      border-width 2px
+      font-size 1rem
+      width 10rem
+      color color2
+      &:hover
+        background rgba(44, 44, 44, 1)
+        color #fff
+        transition all .3s ease-in-out
 
-.navigation
-  font-family 'Roboto'
-  font-weight 300
-  height 50px
-  font-size 30px
-  text-align right
+.hero a.button, .hero input[type='submit']
+  margin 0 auto
+  display block
+  background-color rgba(0, 0, 0, 0)
+  border-style solid
+  border-radius 3px
+  border-color color2
+  border-width 2px
+  font-size 1rem
+  width 10rem
+  color color2
+  padding 1rem 2rem 1.0625rem 2rem
 
-.container
-  margin 50px auto
+.left-small
+  border-right 0px
 
-
-.main-content
-  text-align center
-  font-size 18px
-
-.side-content
-  float left
-  width 200px
-  background-color backcolor2
-  font-size 13px
-  height 200px
+@media only screen and (min-width: 800px)
+  nav.top-bar
+      overflow hidden
+  .hero
+    h1
+      padding-top 4.5rem
+      font-size 4rem
+      text-align center
+    p
+      font-size:1.5em
+    a.button, input[type='submit']
+      border-radius 3px
+      border-width 2px
+      font-size 1.3rem
+      width 16rem
+  .top-bar
+    max-width 1280px
+    margin 0 auto
+  .top-bar-section
+    ul
+      margin-left 1em
